tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__LuVCircuitAssemb-AAAAAAAAAAAAAAAAAAAGkw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1683,
  "prerequisites": [
    1490
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You may have noticed that the circuits you're thinking of crafting cost way more, 6x more. This is intended for circuits needing LuV+ voltage. You now need to craft your circuits in the Circuit Assembly Line or CAL if you don't want to pay out the ears in materials. You'll still need to craft your first ones using the normal Circuit Assembler though.\n\nOnce you've done that, you can make an imprint for use in the CAL to set it to make that (and only that) type of circuit.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lLuV Circuit Assembler",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1490
  ],
  "rewards": [],
  "tasks": []
}
