tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__LuVEnergyHatch-AAAAAAAAAAAAAAAAAAAKJw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2599,
  "prerequisites": [
    1722,
    1711
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you want to upgrade your multis (and make the Fusion Reactor) you'll need to make these. You'll need a ton of wafers for Fusion, so step up your Indium game if you haven't already.\n\nYou need an LuV Cutting Machine, or an OC'd multi.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lLuV Energy Hatch",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1722,
    1711
  ],
  "rewards": [],
  "tasks": []
}
