tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__LuVLaserEngraver-AAAAAAAAAAAAAAAAAAAGmQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1689,
  "prerequisites": [
    1490
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The LuV laser engraver is an important part of lategame circuit production. You need to make crystal CPU's for both the crystal processor series of circuits, and later on for the wetware series.\n\n[note]If you've made the Hyper-Intensity Laser Engraver, you can just upgrade that instead.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lLuV Laser Engraver",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1490
  ],
  "rewards": [],
  "tasks": []
}
