tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__LuVSuperconducto-AAAAAAAAAAAAAAAAAAAGrw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1711,
  "prerequisites": [
    1493,
    1722
  ],
  "properties": {
    "auto_claim": false,
    "desc": "How about lossless 32768 EU Wires? Tetraindiumditindibariumtitaniumheptacoppertetrakaidekaoxide is a superconductor wire and will transfer your energy without any loss.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lLuV Superconductors (32,768 EU/t)",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1493,
    1722
  ],
  "rewards": [],
  "tasks": []
}
