tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__NaquadahAlloy-AAAAAAAAAAAAAAAAAAAKLw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2607,
  "prerequisites": [
    2599,
    476,
    2941
  ],
  "properties": {
    "auto_claim": false,
    "desc": "In order to make a Fusion Reactor you're going to need some Naquadah Alloy.\n\nFirst, pop on by Mercury and collect some Deep Iron from small ores if you haven't already, and get Trinium out of it.\n\nYou'll also need Naquadah coils, and LuV Energy Hatches.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lNaquadah Alloy",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2599,
    476,
    2941
  ],
  "rewards": [],
  "tasks": []
}
